1.	Comment generation now processes large projects in batches, dramatically reducing memory usage and preventing crashes on big apps. 	2.	Code formatting is now fully automatic — you get nicely formatted source code without adding any long or weird JVM flags yourself. 	3.	A single humanify / humanify-apk run now does everything end-to-end: deobfuscation → renaming → generating readable comments → final clean formatting, so the output code is much easier to understand.