@@ -9,14 +9,21 @@ import java.util.*;
 import java.util.stream.Collectors;
 
 /**
- * 一条命令串行执行：analyze -> suggest -> apply -> annotate
+ * 一条命令串行执行：analyze -> suggest -> apply -> annotate -> format
  *
  * 用法：
- *   java -jar java-humanify.jar humanify \
+ *   java -jar jhumanify.jar humanify \
  *     --provider local --local-api ollama --endpoint http://localhost:11434 \
  *     --model qwen2.5:1.5b \
  *     --max-concurrent 100 \
  *     samples/src samples/out-humanified
+ *
+ * 流程：
+ *   1. analyze     扫描源码、提取片段 (snippets.json)
+ *   2. suggest     调 LLM 生成重命名建议 (mapping.json)
+ *   3. apply       把 mapping 应用到源码，输出到 OUT_DIR
+ *   4. annotate    生成类/方法/字段的 Javadoc 注释（分批，避免 OOM）
+ *   5. format      进行 google-java-format 排版（由 Formatter fork 子进程并自动加 --add-exports）
  */
 @CommandLine.Command(
         name = "humanify",
@@ -35,24 +42,33 @@ import java.util.stream.Collectors;
                 "  --endpoint URL          Local endpoint (default: http://localhost:11434)\n" +
                 "  --batch INT             Max snippets per LLM batch (default: 12)\n" +
                 "  --max-concurrent INT    Max concurrent LLM calls (default: 100)\n" +
+                "  --lang STR              zh|en (Javadoc language)\n" +
+                "  --style STR             concise|detailed (Javadoc style)\n" +
+                "  --classpath CP          ':'-separated classpath for apply\n" +
                 "\n" +
                 "Flow:\n" +
-                "  analyze → suggest → apply → annotate"
+                "  analyze → suggest → apply → annotate → format"
 )
 public class HumanifyCmd implements Runnable {
     @CommandLine.Mixin
     LlmOptions llm;
-    /* 必选参数 */
+
+    /* 位置参数 */
     @CommandLine.Parameters(index = "0", description = "Input source dir")
     String srcDir;
 
     @CommandLine.Parameters(index = "1", description = "Output dir")
     String outDir;
 
-    /* 应用阶段参数（与 ApplyCmd 保持一致） */
-    @CommandLine.Option(names = "--classpath", split = ":", description = "Extra classpath jars/dirs, separated by ':'")
+    /* Apply 阶段的额外 classpath （影响重命名/引用修正阶段） */
+    @CommandLine.Option(
+            names = "--classpath",
+            split = ":",
+            description = "Extra classpath jars/dirs, separated by ':'"
+    )
     List<String> classpath = new ArrayList<>();
 
+    /* Annotate 阶段注释生成相关 */
     @CommandLine.Option(
             names = {"--lang"},
             defaultValue = "en",
@@ -65,6 +81,26 @@ public class HumanifyCmd implements Runnable {
             description = "Javadoc style: concise|detailed (default: ${DEFAULT-VALUE})")
     String style;
 
+    /* Annotate 阶段的内存控制（分批） */
+    @CommandLine.Option(
+            names = {"--annotate-batch-size"},
+            defaultValue = "300",
+            description = "How many .java files per annotate batch (default: ${DEFAULT-VALUE})"
+    )
+    int annotateBatchSize;
+
+    @CommandLine.Option(
+            names = {"--annotate-temp-root"},
+            description = "Where to create per-batch temp dirs (default: system tmp)"
+    )
+    String annotateTempRoot;
+
+    @CommandLine.Option(
+            names = {"--annotate-keep-temp"},
+            description = "Keep per-batch temp dirs instead of deleting (default: ${DEFAULT-VALUE})"
+    )
+    boolean annotateKeepTemp = false;
+
     @Override
     public void run() {
         Path src = Paths.get(srcDir);
@@ -72,106 +108,155 @@ public class HumanifyCmd implements Runnable {
 
         try {
             if (!Files.isDirectory(src)) {
-                throw new CommandLine.ParameterException(new CommandLine(this),
-                        "Input source dir not found: " + srcDir + " (abs: " + src.toAbsolutePath() + ")");
+                throw new CommandLine.ParameterException(
+                        new CommandLine(this),
+                        "Input source dir not found: " + srcDir + " (abs: " + src.toAbsolutePath() + ")"
+                );
             }
             Files.createDirectories(out);
 
-            // 1) 中间产物
-            Path snippets = out.resolve("snippets.json");
-            Path mapping  = out.resolve("mapping.json");
+            // 临时中间产物
+            Path snippets = out.resolve("snippets.json"); // 来自 analyze
+            Path mapping  = out.resolve("mapping.json");  // 来自 suggest
+
             if (snippets.getParent() != null) Files.createDirectories(snippets.getParent());
             if (mapping.getParent()  != null) Files.createDirectories(mapping.getParent());
 
             long t0 = System.currentTimeMillis();
 
-            /* ========== 1/4 analyze ========== */
-            System.out.println("[humanify] 1/4 analyze...");
-            List<String> analyzeArgs = List.of(src.toString(), snippets.toString());
+            /* ========== 1/5 analyze ========== */
+            System.out.println("[humanify] 1/5 analyze...");
+            List<String> analyzeArgs = List.of(
+                    src.toString(),
+                    snippets.toString()
+            );
             int rc1 = new CommandLine(new AnalyzeCmd()).execute(analyzeArgs.toArray(new String[0]));
-            if (rc1 != 0) throw new IllegalStateException("analyze failed with code " + rc1);
-            if (!Files.exists(snippets) || Files.size(snippets) == 0)
+            if (rc1 != 0) {
+                throw new IllegalStateException("analyze failed with code " + rc1);
+            }
+            if (!Files.exists(snippets) || Files.size(snippets) == 0) {
                 throw new IllegalStateException("snippets.json was not produced: " + snippets);
+            }
 
-            /* ========== 2/4 suggest ========== */
-            System.out.println("[humanify] 2/4 suggest (" + llm.provider + ")...");
+            /* ========== 2/5 suggest ========== */
+            System.out.println("[humanify] 2/5 suggest (" + llm.provider + ")...");
             List<String> suggestArgs = new ArrayList<>();
             suggestArgs.addAll(List.of("--provider", llm.provider));
             suggestArgs.addAll(List.of("--model", llm.model));
             suggestArgs.addAll(List.of("--batch", Integer.toString(llm.batch)));
 
-            // 将并发参数传给 suggest（若 SuggestCmd 提供该字段）
+            // 如果 SuggestCmd 有这些字段就透传
             if (hasField(SuggestCmd.class, "maxConcurrent")) {
                 suggestArgs.addAll(List.of("--max-concurrent", Integer.toString(llm.maxConcurrent)));
             }
-
             if (hasField(SuggestCmd.class, "localApi")) {
                 suggestArgs.addAll(List.of("--local-api", llm.localApi));
             }
             if (hasField(SuggestCmd.class, "endpoint")) {
-                suggestArgs.addAll(List.of("--endpoint", llm.endpoint));
+                if (llm.endpoint != null && !llm.endpoint.isEmpty()) {
+                    suggestArgs.addAll(List.of("--endpoint", llm.endpoint));
+                }
+            }
+            if (hasField(SuggestCmd.class, "timeoutSec")) {
+                suggestArgs.addAll(List.of("--timeout-sec", Integer.toString(llm.timeoutSec)));
             }
 
-            // 位置参数
+            // 位置参数: snippets.json -> mapping.json
             suggestArgs.add(snippets.toString());
             suggestArgs.add(mapping.toString());
 
             int rc2 = new CommandLine(new SuggestCmd()).execute(suggestArgs.toArray(new String[0]));
-            if (rc2 != 0) throw new IllegalStateException("suggest failed with code " + rc2);
-            if (!Files.exists(mapping) || Files.size(mapping) == 0)
+            if (rc2 != 0) {
+                throw new IllegalStateException("suggest failed with code " + rc2);
+            }
+            if (!Files.exists(mapping) || Files.size(mapping) == 0) {
                 throw new IllegalStateException("mapping.json was not produced: " + mapping);
+            }
 
-            /* ========== 3/4 apply ========== */
-            System.out.println("[humanify] 3/4 apply...");
+            /* ========== 3/5 apply ========== */
+            System.out.println("[humanify] 3/5 apply...");
             List<String> applyArgs = new ArrayList<>();
             if (classpath != null && !classpath.isEmpty() && hasField(ApplyCmd.class, "classpath")) {
                 applyArgs.add("--classpath");
-                applyArgs.add(classpath.stream().collect(Collectors.joining(":")));
+                applyArgs.add(
+                        classpath.stream()
+                                .collect(Collectors.joining(":"))
+                );
             }
+            // 位置参数: <SRC_DIR> <mapping.json> <OUT_DIR>
             applyArgs.add(src.toString());
             applyArgs.add(mapping.toString());
             applyArgs.add(out.toString());
 
             int rc3 = new CommandLine(new ApplyCmd()).execute(applyArgs.toArray(new String[0]));
-            if (rc3 != 0) throw new IllegalStateException("apply failed with code " + rc3);
+            if (rc3 != 0) {
+                throw new IllegalStateException("apply failed with code " + rc3);
+            }
 
-            /* ========== 4/4 annotate ========== */
-            System.out.println("[humanify] 4/4 annotate...");
+            /* ========== 4/5 annotate ========== */
+            System.out.println("[humanify] 4/5 annotate...");
 
             List<String> annArgs = new ArrayList<>();
+            // 我们的 AnnotateCmd 是分批版，参数是 flag 风格
             annArgs.add("--src");   annArgs.add(out.toString());
             annArgs.add("--lang");  annArgs.add(lang != null ? lang : "en");
-            annArgs.add("--style"); annArgs.add(style != null ? style : "detailed");
+            annArgs.add("--style"); annArgs.add(style != null ? style : "concise");
+
+            // LLM 相关透传
             annArgs.add("--provider"); annArgs.add(llm.provider != null ? llm.provider : "dummy");
             annArgs.add("--model");    annArgs.add(llm.model != null ? llm.model : "gpt-4o-mini");
             annArgs.add("--batch");    annArgs.add(Integer.toString(llm.batch));
+            annArgs.add("--max-concurrent"); annArgs.add(Integer.toString(llm.maxConcurrent));
 
-            // 将并发参数传给 annotate（AnnotateCmd 已支持）
-            annArgs.add("--max-concurrent");
-            annArgs.add(Integer.toString(llm.maxConcurrent));
-
+            // endpoint / local-api / timeoutSec 这些 AnnotateCmd 里的 DocClient 也会需要
             if ("local".equalsIgnoreCase(llm.provider)) {
-                annArgs.add("--local-api"); annArgs.add((llm.localApi != null && !llm.localApi.isEmpty()) ? llm.localApi : "ollama");
-                if (llm.endpoint != null && !llm.endpoint.isEmpty()) { annArgs.add("--endpoint"); annArgs.add(llm.endpoint); }
-                annArgs.add("--timeout-sec"); annArgs.add(Integer.toString(180));
+                if (llm.localApi != null && !llm.localApi.isEmpty()) {
+                    annArgs.add("--local-api"); annArgs.add(llm.localApi);
+                } else {
+                    annArgs.add("--local-api"); annArgs.add("ollama");
+                }
+                if (llm.endpoint != null && !llm.endpoint.isEmpty()) {
+                    annArgs.add("--endpoint"); annArgs.add(llm.endpoint);
+                }
+                annArgs.add("--timeout-sec"); annArgs.add(Integer.toString(llm.timeoutSec > 0 ? llm.timeoutSec : 180));
             } else {
-                if (llm.endpoint != null && !llm.endpoint.isEmpty()) { annArgs.add("--endpoint"); annArgs.add(llm.endpoint); }
-                annArgs.add("--timeout-sec"); annArgs.add(Integer.toString(180));
+                if (llm.endpoint != null && !llm.endpoint.isEmpty()) {
+                    annArgs.add("--endpoint"); annArgs.add(llm.endpoint);
+                }
+                annArgs.add("--timeout-sec"); annArgs.add(Integer.toString(llm.timeoutSec > 0 ? llm.timeoutSec : 180));
+            }
+
+            // 分批 annotate 的控制参数
+            annArgs.add("--annotate-batch-size"); annArgs.add(Integer.toString(annotateBatchSize));
+            if (annotateTempRoot != null && !annotateTempRoot.isEmpty()) {
+                annArgs.add("--annotate-temp-root"); annArgs.add(annotateTempRoot);
+            }
+            if (annotateKeepTemp) {
+                annArgs.add("--annotate-keep-temp");
             }
 
             int rc4 = new CommandLine(new AnnotateCmd()).execute(annArgs.toArray(new String[0]));
-            if (rc4 != 0) throw new IllegalStateException("annotate failed with code " + rc4);
+            if (rc4 != 0) {
+                throw new IllegalStateException("annotate failed with code " + rc4);
+            }
 
-            // 可选格式化
+            /* ========== 5/5 format ========== */
+            System.out.println("[humanify] 5/5 format...");
             try {
-                Formatter.formatTree(out);
+                // 新版 Formatter 在内部会自己 fork 子进程，并自动加 --add-exports
+                // 用户主进程不用再写那些很长的 JVM 参数
+                Formatter.formatJava(out);
                 System.out.println("[humanify] formatted output.");
             } catch (Throwable t) {
                 System.err.println("[humanify] format skipped: " + t.getMessage());
             }
 
             long t1 = System.currentTimeMillis();
-            System.out.printf("[humanify] done in %.2fs -> %s%n", (t1 - t0) / 1000.0, out);
+            System.out.printf("[humanify] done in %.2fs -> %s%n",
+                    (t1 - t0) / 1000.0,
+                    out
+            );
+
         } catch (Exception e) {
             e.printStackTrace();
             System.exit(2);
@@ -179,11 +264,19 @@ public class HumanifyCmd implements Runnable {
     }
 
     private static boolean hasField(Class<?> cls, String name) {
-        try { cls.getDeclaredField(name); return true; }
-        catch (NoSuchFieldException e) { return false; }
+        try {
+            cls.getDeclaredField(name);
+            return true;
+        } catch (NoSuchFieldException e) {
+            return false;
+        }
     }
 
+    @SuppressWarnings("unused")
     private static void safeDelete(Path p) {
-        try { Files.deleteIfExists(p); } catch (Exception ignore) {}
+        try {
+            Files.deleteIfExists(p);
+        } catch (Exception ignore) {
+        }
     }
 }
